@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-22T16:20:26Z",
-  "count_outdated" : 301,
-  "uniques_outdated" : 151,
-  "count" : 320,
-  "uniques" : 166,
+  "timestamp" : "2022-08-23T01:47:59Z",
+  "count_outdated" : 302,
+  "uniques_outdated" : 152,
+  "count" : 321,
+  "uniques" : 167,
   "clones" : [
-    {
-      "timestamp": "2022-08-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 2,
@@ -56,10 +49,10 @@
     },
     {
       "timestamp": "2022-08-22T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
