@@ -3,11 +3,6 @@
   "uniques": 11,
   "clones": [
     {
-      "timestamp": "2022-08-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -39,8 +34,8 @@
     },
     {
       "timestamp": "2022-08-22T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
